Fixes progress bar alignment

--- a/common/common.scss
+++ b/common/common.scss
@@ -30,6 +30,11 @@ tbody {
   border-width: 1px;
 }
 
+#main {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
 #main-outlet {
   background: rgba($secondary, .95);
   border-radius: 8px;
@@ -37,7 +42,6 @@ tbody {
   max-width: 930px;
   padding: 4% 5% 5%;
   padding-bottom: 5% !important; //overriding inline style
-  margin: 120px auto;
   @include box-shadow;
   @media screen and (max-width: 1120px) {
     width: 80%;
